--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="main w-full h-screen bg-zinc-800"></div>
+    <div class="relative main w-full h-screen bg-zinc-800 text-white p-10">
+      <a href="/logout" class="bg-red-500 absolute px-3 py-2 rounded-md top-0 right-0"
+        >Logout</a
+      >
+    </div>
   </body>
 </html>
