--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home - Saif's Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <div class="relative main w-full h-screen bg-zinc-800 text-white p-10">
-      <a href="/logout" class="bg-red-500 absolute px-3 py-2 rounded-md top-0 right-0"
-        >Logout</a
-      >
+  <body class="bg-zinc-800 text-white">
+    <!-- Navbar -->
+    <nav class="bg-zinc-900 p-5 flex justify-between items-center">
+      <div class="text-xl font-bold">Welcome <%= user.name %></div>
+      <ul class="flex gap-5">
+        <li><a href="/profile" class="hover:text-blue-500">Profile</a></li>
+        <li>
+          <a href="/logout" class="bg-red-500 px-3 py-2 rounded-md">Logout</a>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- Featured Posts Section -->
+    <div class="posts w-1/2 m-auto">
+      <% if(posts.length > 0){ %> <% shuffleArray(posts).forEach((post) => { %>
+      <div class="post w-full p-5 border-2 border-zinc-500 rounded-lg my-5">
+        <div class="flex justify-between">
+          <h3 class="font-semibold text-md">@<%= post.user.username%></h3>
+          <p class="text-zinc-600"><%= time(Date.now() - post.timestamp) %></p>
+        </div>
+        <p class="text-lg my-3"><%=post.post%></p>
+        <div class="flex justify-between items-center">
+          <div class="likes">
+            <p class="text-zinc-500"><%= post.likes.length %> likes</p>
+            <a href="/like/<%= post._id %>" class="text-blue-500 font-semibold"
+              ><%= post.likes.includes(user._id) ? "Unlike" : "Like" %></a
+            >
+          </div>
+        </div>
+      </div>
+      <% })%> <% } else { %>
+      <h3 class="text-zinc-500">No posts yet.</h3>
+      <% } %>
     </div>
   </body>
 </html>
