--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -3,37 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login Page</title>
+    <title>Edit Profile</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      /* Add custom media queries if necessary */
+      @media (max-width: 768px) {
+        .form-container {
+          width: 90%;
+          padding: 4%;
+        }
+      }
+      @media (max-width: 480px) {
+        .form-container {
+          width: 95%;
+          padding: 2%;
+        }
+      }
+    </style>
   </head>
   <body>
     <div
       class="main w-full h-screen bg-zinc-800 flex justify-center items-center text-white"
     >
-      <div class="border-2 border-zinc-700 rounded-md p-5 w-1/4">
+      <div
+        class="form-container border-2 border-zinc-700 rounded-md p-5 w-11/12 md:w-3/4 lg:w-1/3"
+      >
         <h3 class="text-2xl font-semibold tracking-wide text-center">
-          Edit your profile
+          Edit Your Profile
         </h3>
         <form
-          class=""
           autocomplete="off"
           enctype="multipart/form-data"
           action="/profile/edit"
           method="post"
         >
           <div class="my-2">
-            <label for="image">Profile picture :</label>
+            <label for="image" class="block text-sm font-medium"
+              >Profile Picture:</label
+            >
             <input
               class="block w-full bg-transparent border-2 border-zinc-600 rounded-md px-3 py-2"
               type="file"
-              placeholder="Name"
               id="image"
               name="image"
             />
           </div>
 
           <div class="my-2">
-            <label for="name">Name :</label>
+            <label for="name" class="block text-sm font-medium">Name:</label>
             <input
               class="block w-full bg-transparent border-2 border-zinc-600 rounded-md px-3 py-2"
               type="text"
@@ -44,6 +61,7 @@
               value="<%= user.name %>"
             />
           </div>
+
           <input
             class="bg-blue-500 px-5 py-3 rounded-lg block m-auto cursor-pointer"
             type="submit"
