--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
   </head>
   <body class="bg-zinc-800 text-white">
     <!-- Navbar -->
-    <nav class="bg-zinc-900 p-5 flex justify-between items-center">
+    <nav class="bg-zinc-900 p-5 flex flex-wrap justify-between items-center">
       <div class="text-xl font-bold">Welcome <%= user.name %></div>
-      <ul class="flex gap-5">
+      <ul class="flex gap-5 mt-2 md:mt-0">
         <li><a href="/profile" class="hover:text-blue-500">Profile</a></li>
         <li>
           <a href="/logout" class="bg-red-500 px-3 py-2 rounded-md">Logout</a>
@@ -19,17 +19,35 @@
     </nav>
 
     <!-- Featured Posts Section -->
-    <div class="posts w-1/2 m-auto">
+    <div class="posts w-full max-w-3xl mx-auto px-4 py-6">
       <% if(posts.length > 0){ %> <% shuffleArray(posts).forEach((post) => { %>
       <div class="post w-full p-5 border-2 border-zinc-500 rounded-lg my-5">
-        <div class="flex justify-between">
+        <div class="flex flex-wrap justify-between">
           <a href="/user/<%= post.user._id %>">
             <h3 class="font-semibold text-md">@<%= post.user.username%></h3>
           </a>
           <p class="text-zinc-600"><%= time(Date.now() - post.timestamp) %></p>
         </div>
         <p class="text-lg my-3"><%=post.post%></p>
-        <div class="flex justify-between items-center">
+        <% if(post.media != "") { %>
+        <div class="w-full h-96 bg-zinc-700 overflow-hidden">
+          <% if(getFileType(post.media) == "image") { %>
+          <img
+            src="/posts/<%= post.media %>"
+            class="w-full h-full object-contain"
+          />
+          <% } %> <% if(getFileType(post.media) == "video") { %>
+          <video
+            src="/posts/<%= post.media %>"
+            class="w-full h-full object-contain"
+            autoplay
+            muted
+            loop
+          ></video>
+          <% } %>
+        </div>
+        <% } %>
+        <div class="flex flex-wrap justify-between items-center mt-3">
           <div class="likes">
             <p class="text-zinc-500"><%= post.likes.length %> likes</p>
             <a href="/like/<%= post._id %>" class="text-blue-500 font-semibold"
@@ -39,7 +57,7 @@
         </div>
       </div>
       <% })%> <% } else { %>
-      <h3 class="text-zinc-500">No posts yet.</h3>
+      <h3 class="text-zinc-500 text-center">No posts yet.</h3>
       <% } %>
     </div>
   </body>
