--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,15 +6,15 @@
     <title>Login Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <div
-      class="main w-full h-screen bg-zinc-800 flex justify-center items-center text-white"
-    >
-      <div class="border-2 border-zinc-700 rounded-md p-5 w-1/4">
+  <body class="bg-zinc-800 text-white">
+    <div class="main w-full h-screen flex justify-center items-center">
+      <div class="border-2 border-zinc-700 rounded-md p-5 w-11/12 max-w-md">
         <h3 class="text-2xl font-semibold tracking-wide text-center">Login</h3>
-        <form class="" autocomplete="off" action="/login" method="post">
+        <form autocomplete="off" action="/login" method="post">
           <div class="my-2">
-            <label for="username">Username:</label>
+            <label for="username" class="block text-sm font-medium"
+              >Username:</label
+            >
             <input
               class="block w-full bg-transparent border-2 border-zinc-600 rounded-md px-3 py-2"
               type="text"
@@ -26,7 +26,9 @@
           </div>
 
           <div class="my-2">
-            <label for="password">Password:</label>
+            <label for="password" class="block text-sm font-medium"
+              >Password:</label
+            >
             <input
               class="block w-full bg-transparent border-2 border-zinc-600 rounded-md px-3 py-2"
               type="password"
@@ -38,7 +40,7 @@
           </div>
 
           <input
-            class="bg-blue-500 px-5 py-3 rounded-lg block m-auto cursor-pointer"
+            class="bg-blue-500 px-5 py-3 rounded-lg block w-full mt-4 cursor-pointer"
             type="submit"
             value="Login"
           />
